--- a/app/src/main/res/layout/fragment_talk_record.xml
+++ b/app/src/main/res/layout/fragment_talk_record.xml
@@ -12,20 +12,20 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="aaa"
+        android:text="13341150668"
         android:id="@+id/tvName"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="222"
+        android:text="辽宁大连 联通"
         android:id="@+id/tvNum"
         />
 </LinearLayout>
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="2016"
+    android:text="18:23"
     android:layout_weight="1"
     android:id="@+id/tvYear"
     />
